# Burda-HackaTUM

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.backend.json
backend/: .env.example  README.md  alembic.ini  requirements.txt  test_rss.py
backend/alembic/: env.py
backend/alembic/versions/: 07e773e1cd09_add_audiofile_table.py  add_language_field.py  c17f16338883_add_type_to_audio_files.py  ff56ae82308f_add_crew_results_table.py
backend/legacy_ts/: db.ts  logger.ts  rss.ts  server.ts
backend/news_crew/: README.md  pyproject.toml
backend/news_crew/src/news_crew/: crew.py  main.py
backend/news_crew/src/news_crew/config/: agents.yaml  tasks.yaml
backend/news_crew/src/news_crew/tools/: custom_tool.py
backend/src/: generate_audio.py  generate_db_from_json.py  main.py  main_cors.py  main_simple.py  news.json  news_data.json
backend/src/app/: ai_config.py  config.py  (+9 more)
news_agents/: README.md  pyproject.toml
news_agents/src/news_agents/: crew.py  main.py  rss_feed_scraper.py
news_agents/src/news_agents/config/: ._tasks.yaml  agents.yaml  tasks.yaml
news_agents/src/news_agents/tools/: .___init__.py  custom_tool.py
src/: App.tsx  index.css
src/components/: AudioPlayer.tsx  ChatBot.tsx  LoadingSpinner.tsx  NewsCard.tsx  NewsCarousel.tsx  NewsDetail.tsx  NewsFilters.tsx  NewsList.tsx  PlayButton.tsx  TrendingNews.tsx  VideoPlayer.tsx
src/hooks/: useNews.ts
src/services/: api.ts  audioService.ts  chatService.ts
src/types/: audio.ts  filters.ts  news.ts
src/utils/: filterArticles.ts
