[project]
name = "news_crew"
version = "0.1.0"
description = "news-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
news_crew = "news_crew.main:run"
run_crew = "news_crew.main:run"
train = "news_crew.main:train"
replay = "news_crew.main:replay"
test = "news_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
